# Master-Thesis-Final

./: .gitignore  AUTHORS  CMakeLists.txt
cmake/: FindCUDA.cmake  FindSUtilGLUT.cmake  sampleConfig.h.in
data/Models/killeroos/: killeroos_scene.mtl
source/: CMakeLists.txt
source/cuda/: triangle_mesh.cu
source/master-thesis/: AdaptivePathTraceRenderContext.h  AdaptiveSturct.h  AdaptiveUtil.h  Buffers.h  CMakeLists.txt  Camera.h  DebugHoelder.h  DeviceIncludes.h  GraphicsWindow.cpp  GraphicsWindow.h  HoelderAdaptive.h  HoelderDebugBuffers.h  IOptixRenderContext.h  LevelHoelderAdaptive.h  MitchellFilter.h  MitchellFilterDevice.h  PathTraceRenderContext.h  RayTraceRenderContext.h  RayTraceRenderer.cpp  Scene.h  Scenes.h  TestHoelder.h  TrackballCamera.h  VarianceAdaptive.h  adaptive - Copy.cu  adaptiveOptixPathTracer.cu  adaptivePostProcessing.cu  draw_color.cu  optixHello.cpp  optixHello_BackUp.cpp  optixHello_BackUp3.cpp  optixHello_Backup2.cpp  optixPathTracer.cu  optixPathTracer.h  parallelogram.cu  variance_adaptive.cu
source/sutil/: CMakeLists.txt  CMakeLists_backup.txt  Mesh.cpp  Mesh.h  OptiXMesh.cpp  OptiXMesh.h  PNGLoader.cpp  PNGLoader.h  sutil.cpp  sutil.h
source/sutil/rply-1.01/: rply.c  rply.h
source/sutil/tinyobjloader/: tiny_obj_loader.h
source/tests/: CMakeLists.txt
